Address comments in PR #121
* Remove boolean CLI option and make reporting default, add stub
methods for 'reconcile' and 'submit' commands
* Create 'reports' subfolder
* Update Report.to_html and Report.to_plain_text to abstract methods
* Remove Report.status property method
* Simplify report templates
* Reorganize logic in Workflow.process_sqs_queue, capturing all processed items
and differentiate between 'processing errors' and 'non-ingested items'

--- a/dsc/templates/html/finalize.html
+++ b/dsc/templates/html/finalize.html
@@ -3,10 +3,10 @@
 {% block content %}
  
 <p><b>Results summary for {{workflow_name}} deposit for batch='{{batch_id}}'</b></p>
-<p>Status: {{status}}</p>
-<p>Ran on: {{report_date}}</p>
+<p>Run date: {{report_date}}</p>
+<p>Results:</p>
 
-<p>Successfully deposited {{ processed_items|length }} items.</p>
-<p>Encountered {{ errors|length }} errors.</p>
+<p>Ingested: {{ processed_items|length }}</p>
+<p>Errors: {{ errors|length }}</p>
 
 {% endblock %}
