--- a/dsc/reports/templates/html/finalize.html
+++ b/dsc/reports/templates/html/finalize.html
@@ -2,10 +2,11 @@
 
 {% block content %}
  
-<p><b>Results summary for {{workflow_name}} deposit for batch='{{batch_id}}'</b></p>
+<p><b>Ingest results for {{workflow_name}} deposit</b></p>
+<p>Batch: {{batch_id}}</p>
 <p>Run date: {{report_date}}</p>
-<p>Results:</p>
 
+<p>Results:</p>
 <p>Ingested: {{ processed_items|length }}</p>
 <p>Errors: {{ errors|length }}</p>
 
