--- a/dsc/reports/templates/html/finalize.html
+++ b/dsc/reports/templates/html/finalize.html
@@ -7,7 +7,7 @@
 <p>Run date: {{report_date}}</p>
 
 <p>Results:</p>
-<p>Ingested: {{ processed_items|length }}</p>
+<p>Processed: {{ processed_items|length }}</p>
+<p>Ingested: {{ ingested_items | length }}</p>
 <p>Errors: {{ errors|length }}</p>
-
 {% endblock %}
