Consolidate 'finalize' result summaries into a single file
Why these changes are being introduced:
* Simplify generated report via 'finalize' by keeping
all DSS results for a batch in a single file

How this addresses that need:
* Update 'finalize' Jinja reporting templates to read all
results from Workflow.events.processed_items
* Create FinalizeReport.create_summary method to create
content of email body
* Fix Docker build and publish commands in Makefile

Side effects of this change:
* The emailed report sent via the 'finalize' command will comprise of
a single CSV file attachment, containing the information from all
parsed DSS result messages.

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-1320

--- a/dsc/reports/templates/html/finalize.html
+++ b/dsc/reports/templates/html/finalize.html
@@ -7,7 +7,9 @@
 <p>Run date: {{report_date}}</p>
 
 <p>Results:</p>
-<p>Processed: {{ processed_items|length }}</p>
-<p>Ingested: {{ ingested_items | length }}</p>
-<p>Errors: {{ errors|length }}</p>
+<ul>
+  {% for key, value in summary.items() %}
+    <li>{{ key }}: {{ value }}</li>
+  {% endfor %}
+</ul>
 {% endblock %}
